--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loadinglazy",
-  "version": "1.0.0",
-  "description": "HTML 내 `<img>` 태그에 `loading=\"lazy\"` 속성을 자동으로 추가하고, 이미지 실제 크기를 계산해 `width`, `height`, `style` 속성을 넣어주는 스크립트임.",
+  "version": "1.6.0",
+  "description": "HTML 내 `<img>` 태그에 성능 최적화 속성을 자동 추가하고 크기를 계산하는 고성능 스크립트",
   "main": "convert_loading_lazy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,12 +13,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "dependencies": {},
   "bugs": {
     "url": "https://github.com/R00neyj/img_loading_lazy/issues"
   },
-  "homepage": "https://github.com/R00neyj/img_loading_lazy#readme",
-  "dependencies": {
-    "cheerio": "^1.2.0"
-  }
+  "homepage": "https://github.com/R00neyj/img_loading_lazy#readme"
 }
