--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "loadinglazy",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "HTML 내 `<img>` 태그에 성능 최적화 속성을 자동 추가하고 크기를 계산하는 고성능 스크립트",
   "main": "convert_loading_lazy.js",
+  "bin": "convert_loading_lazy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:exe": "pkg . --targets node18-win-x64 --output loadinglazy.exe"
+  },
+  "pkg": {
+    "assets": [
+      "input/**/*",
+      "images/**/*"
+    ]
   },
   "repository": {
     "type": "git",
@@ -13,9 +21,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
   "bugs": {
     "url": "https://github.com/R00neyj/img_loading_lazy/issues"
   },
-  "homepage": "https://github.com/R00neyj/img_loading_lazy#readme"
+  "homepage": "https://github.com/R00neyj/img_loading_lazy#readme",
+  "devDependencies": {
+    "pkg": "^5.8.1"
+  }
 }
