--- a/src/package.json
+++ b/src/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/R00neyj/img_loading_lazy#readme",
   "devDependencies": {
     "pkg": "^5.8.1"
+  },
+  "dependencies": {
+    "cheerio": "^1.2.0"
   }
 }
